fix layout issue and responsive bugs

--- a/style.css
+++ b/style.css
@@ -151,31 +151,36 @@ html {
   padding: 1.5em;
 }
 .masonry-wrapper {
-  padding: 1.5em;
-  max-width: 1500px;
+  width: 90%;
   margin-right: auto;
   margin-left: auto;
 }
 .masonry {
   columns: 2;
-  column-gap: 100px;
+  column-gap: 80px;
 }
 .masonry-item {
   display: inline-block;
   vertical-align: top;
   margin-bottom: 90px;
+  transition: all 0.4s ease;
 }
 .masonry-item a {
   color: #c6c5c5;
 }
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 1000px) {
   .masonry {
     columns: 1;
+    margin-left: 30px;
+  }
+  .masonry-item {
+    width: 94%;
   }
 }
-@media only screen and (min-width: 1324px){
+@media only screen and (min-width: 1324px) {
   .masonry {
     columns: 3;
+    /* column-gap: 200px; */
   }
 }
 .masonry-content {
@@ -184,7 +189,7 @@ html {
 .masonry-item {
   color: #111111;
   background-color: #ffffff;
-  width: 500px;
+  /* width: 500px; */
 }
 .masonry-title,
 .masonry-description {
@@ -206,6 +211,10 @@ html {
   height: 850px;
   display: flex;
 }
+.footerContainer p {
+  margin: 0;
+  padding: 0;
+}
 .box1 {
   flex: 1 1 36%;
 }
@@ -222,17 +231,17 @@ html {
 .inBox1 {
   height: 33.333%;
   flex: 1 1 33.3333%;
-  margin: 20px;
+  margin: 0 20px;
 }
 .inBox2 {
   height: 33.333%;
   flex: 1 1 33.3333%;
-  margin: 20px;
+  margin: 0 20px;
 }
 .inBox3 {
   flex: 1 1 33.3333%;
   height: 33.333%;
-  margin: 20px;
+  margin: 0 20px;
 }
 .inBox1,
 .inBox2 {
@@ -244,6 +253,7 @@ html {
   border: 0.5px solid#c6c5c5;
   border-left: none;
   border-right: none;
+  margin-top: 50px;
 }
 .box2 .inBox3 {
   display: flex;
@@ -271,27 +281,64 @@ html {
   align-items: flex-end;
 }
 .nav {
-  color: #c6c5c5;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #000;
+  padding: 13px 0 !important;
+  margin-bottom: 30px !important;
+  font-weight: 500;
+  cursor: pointer;
+  opacity: 0.5;
 }
-.boldText{
+.boldText {
   font-size: 23px;
+}
+.inBox3 p {
+  color: #cacaca;
+}
+.inBox3 h2 {
+  font-weight: lighter;
+}
+.box1 img {
+  width: 250px;
+  height: 197px;
+  margin: 20px 36px;
+  float: right;
 }
 /* Media Query */
 @media (max-width: 1600px) {
   video {
     width: 800px !important;
   }
-
+ 
 }
 @media (max-width: 1390px) {
   video {
     width: 700px !important;
   }
+
+}
+@media (max-width: 1150px){
+   .footerContainer {
+    flex-direction: column;
+    height: 100%;
+  }
+  .box1{
+    display: none;
+  }
+  .inBox3{
+    display: none;
+  }
+  .col1, .col2{
+    display: none;
+  }
+
 }
 @media (max-width: 1000px) {
   video {
     width: 600px !important;
   }
+  
 }
 @media (max-width: 800px) {
   video {
@@ -301,7 +348,7 @@ html {
     grid-column: 1 / 6;
   }
 }
-@media (max-height: 800px) {
+@media screen and (max-height: 800px) {
   .slogan {
     grid-row: 3 / 5;
   }
